[feat] add configuration management (#27)
* [feat] add configuration management

* [build] add hoplite-json as dependency and update config paths

* [doc] add comments to configuration classes