@@ -37,6 +37,8 @@ dependencies {
     implementation("commons-codec:commons-codec:1.19.0")
     implementation("io.github.java-diff-utils:java-diff-utils:4.16")
     implementation("io.github.java-diff-utils:java-diff-utils-jgit:4.16")
+    implementation("com.sksamuel.hoplite:hoplite-core:3.0.0.RC1")
+    implementation("com.sksamuel.hoplite:hoplite-json:3.0.0.RC1")
     testImplementation(kotlin("test"))
 }
 
@@ -59,15 +61,20 @@ graalvmNative {
             debug.set(true)
             verbose.set(true)
             fallback.set(true)
-            buildArgs.addAll(listOf(
-                "--enable-url-protocols=https"
-            ))
+            buildArgs.addAll(
+                "--no-fallback",
+                "--enable-all-security-services",
+                "--report-unsupported-elements-at-runtime",
+                "--enable-url-protocols=https",
+                "-J--add-exports=java.management/sun.management=ALL-UNNAMED",
+                "-H:ResourceConfigurationFiles=${projectDir}/META-INF/native-image/kotlin-resource.json"
+            )
         }
     }
 
     agent {
         defaultMode = "standard"
-        enabled.set(true)
+        enabled.set(false)
     }
 }
 
